# trame-server

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: pre-commit.yml  test.yml  test_and_publish.yml  test_and_release.yml
docs/: README.md  build.sh
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/: dataclass_typed_state.py  modified_keys.py
examples/child-server/: multi_server_router.py  multi_server_size_observer.py  multi_server_triggers.py
examples/client-server/: README.md  client.py  script.py  server.py
examples/client-state/: clear_client_state.py  stateUpdateListener.js
examples/exceptions/: app_raw_api.py  app_trame.py
examples/namespace/: app.py
examples/start-stop-server/: app.py
src/trame_server/: client.py  controller.py  core.py  http.py  protocol.py  state.py  ui.py
src/trame_server/utils/: __init__.py  argument_parser.py  banner.py  browser.py  desktop.py  logger.py  server.py  typed_state.py
tests/: conftest.py  requirements.txt  test_async.py  test_client.py  test_controller.py  test_namespace.py  test_server.py  test_state.py  test_translator.py  test_typed_state.py  test_typed_state_future_annotations.py  test_ui.py  test_utils.py
tests/data/: test_cli.py
trame_server/: __init__.py  client.py  controller.py  core.py  protocol.py  state.py  ui.py
trame_server/utils/: __init__.py  argument_parser.py  asynchronous.py  banner.py  banner.txt  browser.py  desktop.py  hot_reload.py  logger.py  namespace.py  server.py  typed_state.py  version.py
